# AI-Powered-Student-Notes-Generator

./: Admin.cpp  Admin.h  AdminPage.cpp  AdminPage.h  CMakeLists.txt  Cart.cpp  Cart.h  CheckoutDialog.cpp  CheckoutDialog.h  Customer.cpp  Customer.h  CustomerPage.cpp  CustomerPage.h  DataManager.h  LoginPage.cpp  LoginPage.h  MainPage.cpp  MainPage.h  OrderManager.cpp  OrderManager.h  Product.cpp  Product.h  RegisterPage.cpp  RegisterPage.h  SalesDialog.cpp  SalesDialog.h  User.cpp  User.h  UserWindow.cpp  UserWindow.h  main.cpp  products.csv  run.txt  style.qss  style_dark.qss  users.csv
